yaml/dev/admin-service-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: "admin-server-service"
  namespace: "dev"
spec:
  ports:
    - port: 80
      targetPort: 33011
      protocol: TCP
  type: ClusterIP
  selector:
    app: "admin-server"
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: admin-ingress
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: admin-dev.yj2025.com
      http:
        paths:
          - path: /
            backend:
              serviceName: admin-server-service
              servicePort: 80
