yaml/dev/front-service-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: "ierp-front-service"
  namespace: "dev"
spec:
  ports:
    - port: 80
      targetPort: 8865
      protocol: TCP
  type: ClusterIP
  selector:
    app: "ierp-front"
---
apiVersion: v1
kind: Service
metadata:
  name: "nginx-erp-service"
  namespace: "dev"
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
  selector:
    app: "nginx-erp"
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: front-ingress
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - devyj2025.com
      secretName: yj2025-secret # 前提：kubectl create secret tls yj2025-secret --cert server.pem --key server.key -n dev
  rules:
    - host: dev.yj2025.com
      http:
        paths:
          - path: /
            backend:
              serviceName: nginx-erp-service
              servicePort: 80
          - path: /ierp
            backend:
              serviceName: ierp-front-service
              servicePort: 80
